--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,11 @@
+name: Deploy to EKS
+
+on:
+  workflow_dispatch:
+  push:
+    branches:
+      - main
+    
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
