--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches:
       - main
-    
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -20,21 +20,23 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-2
 
-    - name: Log in to Amazon ECR
-      uses: aws-actions/amazon-ecr-login@v2
+    - name: Log in to Amazon ECR Public
+      run: |
+        aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
     - name: Build Docker image
       run: |
-        docker build -t ${{ secrets.ECR_REPO }}:latest .
-        docker tag ${{ secrets.ECR_REPO }}:latest public.ecr.aws/k5u0o7b3/team2-namegen:latest
-
-    - name: Push Docker image to ECR
+        docker build -t public.ecr.aws/k5u0o7b3/team2-namegen:latest .
+    
+    - name: Push Docker image to ECR Public
       run: |
         docker push public.ecr.aws/k5u0o7b3/team2-namegen:latest
 
+    - name: Update kubeconfig
+      run: aws eks update-kubeconfig --name <your-cluster-name> --region us-east-2
+
     - name: Deploy to EKS
-      run: |
-        kubectl apply -f k8s-manifests/
+      run: kubectl apply -f k8s-manifests/
