--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,7 @@ jobs:
         docker push public.ecr.aws/k5u0o7b3/team2-namegen:latest
 
     - name: Update kubeconfig
-      run: aws eks update-kubeconfig --name <your-cluster-name> --region us-east-2
+      run: aws eks update-kubeconfig --name namegen-cluster --region us-east-2
 
     - name: Deploy to EKS
       run: kubectl apply -f k8s-manifests/
