--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
 
     - name: Build Docker image
       run: |
-        docker build -t public.ecr.aws/k5u0o7b3/team2-namegen:latest .
+        docker build -t public.ecr.aws/k5u0o7b3/team2-namegen:marah .
     
     - name: Push Docker image to ECR Public
       run: |
